test/pass/api/list/list_select_all.lly
if [1,2,3].select{|a| true} != [1,2,3]:
    stderr.print("Failed.")
