test/fail/classes/invalid_decl_location.lly
#[
SyntaxError: Cannot declare a class here.
Where: File "invalid_decl_location.lly" at line 7
]#

if 1: {
    class abc() {
    }
}
